Fixed Notepage alignment issue

--- a/src/page/NotePage.module.css
+++ b/src/page/NotePage.module.css
@@ -91,7 +91,7 @@
     width: 100%;
     height: -moz-max-content;
     height: fit-content;
-    background-color: red;
+    /* background-color: red; */
     top: -10px;
     left: 0px;
 }
@@ -132,7 +132,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    left: 0px;
+    left: -150px;
+    /* background-color: azure; */
 }
 
 .subForm {
@@ -192,6 +193,10 @@
 }
 
 .noteWrp {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     width: 100%;
     height: 100%;
     top: 0px;
